# libvoice

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.server-cli  JITTER_UNIMPLEMENTED_AI.md  docker-compose.yml
.cargo/: config.toml
backend/: README.md  TASK.md  package-lock.json  package.json  tsconfig.json  tsconfig.server.json
backend/src/app/: globals.css  layout.tsx  page.tsx
backend/src/components/: rating-console.tsx
backend/src/lib/: api-base.ts
backend/src/server/: app.module.ts  cli.ts  config.ts  database.service.ts  health.controller.ts  main.ts  migrate.ts  migration-runner.ts
backend/src/server/audio/: audio.controller.ts
backend/src/server/evaluation/: comparison.controller.ts  comparison.repository.ts  comparison.service.ts  types.ts
backend/src/server/import/: voxceleb2-import.service.ts
backend/src/server/migrations/: 001_init.sql
backend/src/shared/: contracts.ts
libvoice/: .gitignore  Cargo.toml  README.md
libvoice-wasm/: Cargo.toml  README.md
libvoice-wasm/src/: lib.rs
libvoice-web-demo/: README.md  index.html  package.json
libvoice-web-demo/src/: audio-capture-worklet.js  main.js  styles.css
libvoice/src/: analyzer.rs  config.rs  formant.rs  harmonic.rs  lib.rs  model.rs  signal.rs  spectral.rs  stats.rs  summary.rs
libvoice/tests/: voice_analysis.rs
mlprocess/: .gitignore  README.md  requirements.txt
mlprocess/app/: __init__.py  audio.py  cli.py  config.py  main.py  models.py
mlprocess/scripts/: setup_venv.sh
src/: analyzer.rs  config.rs  lib.rs  model.rs  signal.rs  spectral.rs  stats.rs  summary.rs
telegrambot/: Cargo.toml  Dockerfile  README.md
telegrambot/src/: audio.rs  graphs.rs  input.rs  main.rs  options.rs  report.rs  voice.rs
tests/: voice_analysis.rs
voiceanalysis/: Cargo.toml
voiceanalysis/src/: audio.rs  graphs.rs  lib.rs  options.rs  report.rs
voiceanalyzercli/: Cargo.toml
voiceanalyzercli/src/: main.rs
voiceanalyzerserver/: Cargo.toml  README.md
voiceanalyzerserver/src/: main.rs
