[package]
name = "libvoice-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
libvoice = { path = "../libvoice" }
serde.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true
