[package]
name = "voiceanalyzercli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
libvoice = { path = "../libvoice" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
voiceanalysis = { path = "../voiceanalysis" }
