[package]
name = "voiceanalyzerserver"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-stream.workspace = true
axum.workspace = true
bytes.workspace = true
clap.workspace = true
futures-util.workspace = true
http-body-util.workspace = true
libvoice = { path = "../libvoice" }
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
symphonia.workspace = true
tokio.workspace = true
